Change image source from pcb.jpg to pcb.png

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                     <!-- PROJECT CARD 1 -->
                     <div class="carousel-item">
-                        <img src="./pcb.jpg"
+                        <img src="./pcb.png"
                             alt="PielectricsEagles">
                         <div class="carousel-caption">
                             <h3>WLED Controller</h3>
